fix #1; sonar aggiunto al progetto

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
     <!-- External Deps -->
     <version.shrinkwrap_shrinkwrap>1.2.6</version.shrinkwrap_shrinkwrap>
     <version.shrinkwrap_descriptors>2.0.0</version.shrinkwrap_descriptors>
+  
+    <!-- Sonarcloud -->
+    <sonar.organization>ciemmemodelli</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <issueManagement>
